--- a/LiteTube/Controls/LoadingListViewLarge.xaml
+++ b/LiteTube/Controls/LoadingListViewLarge.xaml
@@ -8,84 +8,23 @@
     xmlns:local="clr-namespace:LiteTube.Controls"
     xmlns:interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity">
 
-    <DataTemplate x:Key="LoadingTextBlockDataTemplate">
-        <Grid>
-            <TextBlock Text="{Binding Path=LocalizedResources.Loading, Source={StaticResource LocalizedStrings}}"
-                       Style="{StaticResource LoadingTextBlockStyle}"
-                       Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-
-            <TextBlock Text="{Binding Path=LocalizedResources.Empty, Source={StaticResource LocalizedStrings}}"
-                       Style="{StaticResource LoadingTextBlockStyle}"
-                       Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-
-            <TextBlock Text="{Binding Path=LocalizedResources.CheckConnection, Source={StaticResource LocalizedStrings}}"
-                       Style="{StaticResource LoadingTextBlockStyle}"
-                       Visibility="{Binding IsConnected, Converter={StaticResource InverseBooleanToVisibilityConverter}}"/>
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="CategoryItemTemplate">
-        <Grid Margin="0,0,0,5"
-              Background="{StaticResource PhoneSecondaryBackgroundBrush}"
-              Height="100">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-
-            <TextBlock Text="{Binding Title}" 
-                       Grid.Column="0"
-                       TextWrapping="Wrap" 
-                       TextTrimming="WordEllipsis"
-                       FontSize="28"
-                       FontWeight="Light"
-                       VerticalAlignment="Center"
-                       Margin="20,0,0,0"
-                       MaxHeight="80"
-                       Foreground="{StaticResource PhoneSecondaryForegroundBrush}"/>
-            
-            <Ellipse Width="55"
-                     Height="55"
-                     Margin="20"
-                     Grid.Column="1"
-                     Visibility="{Binding Image, Converter={StaticResource StringToVisibilityConverter}}">
-                <Ellipse.Fill>
-                    <ImageBrush>
-                        <ImageBrush.ImageSource>
-                            <BitmapImage UriSource="{Binding Image}" />
-                        </ImageBrush.ImageSource>
-                    </ImageBrush>
-                </Ellipse.Fill>
-            </Ellipse>
-            <!--<Border Grid.Column="1"
-                    Margin="20"
-                    Width="55"
-                    Height="55"
-                    VerticalAlignment="Center"
-                    Visibility="{Binding Image, Converter={StaticResource StringToVisibilityConverter}}">
-                <Image Source="{Binding Image}"/>
-            </Border>-->
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="LoadingListViewItemNoMenu">
-        <Grid Margin="0,0,0,5" 
+    <DataTemplate x:Key="LoadingListViewItemNoMenuLarge">
+        <Grid Margin="0,0,0,10" 
               Background="{Binding IsNowPlaying, Converter={StaticResource ColorValueConverter}}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
             <Grid Grid.Column="0" 
-                HorizontalAlignment="Left"
                 Background="{StaticResource PhoneSecondaryBackgroundBrush}"
-                Height="100"
-                Width="165"
                 Margin="2">
 
-                <Image Stretch="UniformToFill">
+                <Image Stretch="UniformToFill"
+                       MinHeight="240">
                     <Image.Source>
-                        <BitmapImage UriSource="{Binding ImagePath}" CreateOptions="BackgroundCreation"/>
+                        <BitmapImage UriSource="{Binding ImagePath}" 
+                                     CreateOptions="BackgroundCreation"/>
                     </Image.Source>
                 </Image>
 
@@ -98,7 +37,7 @@
                     <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
                                 TextWrapping="NoWrap" 
                                 Foreground="White"
-                                FontSize="14"/>
+                                FontSize="16"/>
                 </Border>
 
                 <Border Margin="2"
@@ -111,54 +50,43 @@
                         <ContentPresenter ContentTemplate="{StaticResource ViewIcon}"/>
                         <TextBlock TextWrapping="NoWrap"
                                    Foreground="White"
-                                   FontSize="14"
+                                   FontSize="16"
                                    Margin="5,0,0,0"
                                    Text="{Binding ViewCount, Converter={StaticResource NumberToStringConverter}}"/>
                     </StackPanel>
                 </Border>
             </Grid>
 
-            <StackPanel Grid.Column="1" 
-                        Margin="0,0,-10,0">
+            <StackPanel Grid.Row="1" 
+                        Margin="0,5,0,10">
                 <TextBlock Text="{Binding Title}" 
-                            Style="{StaticResource PhoneTextNormalStyle}"
-                            TextWrapping="Wrap"
-                            MaxHeight="54"/>
+                           Style="{StaticResource PhoneTextNormalStyle}"
+                           TextWrapping="Wrap"
+                           MaxHeight="54"/>
                 <TextBlock Text="{Binding ChannelTitle}" 
-                            Style="{StaticResource PhoneTextSmallStyle}"
-                            TextWrapping="NoWrap"/>
+                           Style="{StaticResource PhoneTextSmallStyle}"
+                           TextWrapping="NoWrap"/>
                 <TextBlock TextWrapping="NoWrap"
-                               Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
-                               Style="{StaticResource PhoneTextSmallStyle}" 
-                               FontSize="18">
-                               <!--Foreground="#FF67217A">-->
+                           Text="{Binding PublishedAt, Converter={StaticResource DateTimeToDisplayStringConverter}}"
+                           Style="{StaticResource PhoneTextSmallStyle}" 
+                           FontSize="18">
+                           <!--Foreground="#FF67217A">-->
                         <Run Text="{Binding Path=LocalizedResources.PublishedAt, Source={StaticResource LocalizedStrings}}"/>
                         <Run Text="{Binding PublishedAt}" />
                 </TextBlock>
             </StackPanel>
         </Grid>
     </DataTemplate>
-
-    <DataTemplate x:Key="LoadingListViewItem">
+    
+    <DataTemplate x:Key="LoadingListViewItemLarge">
         <local:ListBoxTemplateSelector Content="{Binding}" 
                                        HorizontalContentAlignment="Stretch">
             <local:ListBoxTemplateSelector.Normal>
                 <DataTemplate>
                     <Grid Background="{Binding IsNowPlaying, Converter={StaticResource ColorValueConverter}}">
-                        <!--<Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>-->
             
                         <ContentPresenter Content="{Binding}"
-                                          ContentTemplate="{StaticResource LoadingListViewItemNoMenu}"/>
-
-                        <!--<ToggleButton Grid.Column="1"
-                                      Visibility="{Binding IsContexMenu, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                      Style="{StaticResource MoreButtonStyle}"
-                                      x:Name="moreButton">
-                            <ContentPresenter ContentTemplate="{StaticResource MoreIcon}" />
-                        </ToggleButton>-->
+                                          ContentTemplate="{StaticResource LoadingListViewItemNoMenuLarge}"/>
 
                         <toolkit:ContextMenuService.ContextMenu>
                             <toolkit:ContextMenu Name="ContextMenu"
@@ -188,7 +116,7 @@
         </local:ListBoxTemplateSelector>
     </DataTemplate>
     
-    <DataTemplate x:Key="LoadingPlaylistListViewItem">
+    <DataTemplate x:Key="LoadingPlaylistListViewItemLarge">
         <local:ListBoxTemplateSelector Content="{Binding}" 
                                        HorizontalContentAlignment="Stretch">
             <local:ListBoxTemplateSelector.Normal>
@@ -250,7 +178,7 @@
         </local:ListBoxTemplateSelector>
     </DataTemplate>
 
-    <DataTemplate x:Key="LoadingMenuPlaylistsViewItem">
+    <DataTemplate x:Key="LoadingMenuPlaylistsViewItemLarge">
         <local:ListBoxTemplateSelector Content="{Binding}" 
                                        HorizontalContentAlignment="Stretch">
             <local:ListBoxTemplateSelector.Normal>
@@ -262,7 +190,7 @@
                         </Grid.ColumnDefinitions>-->
 
                         <ContentPresenter Content="{Binding}"
-                                        ContentTemplate="{StaticResource LoadingPlaylistListViewItem}"/>
+                                        ContentTemplate="{StaticResource LoadingPlaylistListViewItemLarge}"/>
 
                         <!--<ToggleButton Grid.Column="1"
                                       Visibility="{Binding IsContexMenu, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -294,7 +222,7 @@
         </local:ListBoxTemplateSelector>
     </DataTemplate>
 
-    <DataTemplate x:Key="LoadingListViewSmall" >
+    <DataTemplate x:Key="LoadingListView" >
         <Grid x:Name="ContentRoot">
             <Grid>
                 <ListBox Margin="0" 
@@ -303,7 +231,7 @@
                          common:ItemClickCommand.Command="{Binding ItemClickCommand}"
                          common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
                          ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
-                         ItemTemplate="{StaticResource LoadingListViewItem}"/>
+                         ItemTemplate="{StaticResource LoadingListViewItemLarge}"/>
 
                 <Grid x:Name="BlockMulti" 
                       Width="50" 
@@ -317,7 +245,7 @@
         </Grid>
     </DataTemplate>
 
-    <DataTemplate x:Key="LoadingListViewNoMenuSmall" >
+    <DataTemplate x:Key="LoadingListViewNoMenu" >
         <Grid x:Name="ContentRoot">
             <Grid>
                 <ListBox Margin="0" 
@@ -326,7 +254,7 @@
                          common:ItemClickCommand.Command="{Binding ItemClickCommand}"
                          common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
                          ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
-                         ItemTemplate="{StaticResource LoadingListViewItemNoMenu}"/>
+                         ItemTemplate="{StaticResource LoadingListViewItemNoMenuLarge}"/>
 
                 <Grid x:Name="BlockMulti" 
                       Width="50" 
@@ -339,32 +267,8 @@
                               ContentTemplate="{StaticResource LoadingTextBlockDataTemplate}"/>
         </Grid>
     </DataTemplate>
-
-    <DataTemplate x:Key="LoadingPlaylstListViewSmall" >
-        <Grid x:Name="ContentRoot">
-            <Grid>
-                <ListBox Margin="0" 
-                         Name="PLaylistLisBox"
-                         ItemsSource="{Binding Items}"
-                         toolkit:TiltEffect.IsTiltEnabled="True" 
-                         common:ItemClickCommand.Command="{Binding ItemClickCommand}"
-                         common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
-                         ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
-                         ItemTemplate="{StaticResource LoadingPlaylistListViewItem}"/>
-
-                <Grid x:Name="BlockMulti" 
-                      Width="50" 
-                      Background="Transparent" 
-                      HorizontalAlignment="Left" 
-                      Visibility="Visible"/>
-            </Grid>
-
-            <ContentPresenter Content="{Binding}"
-                              ContentTemplate="{StaticResource LoadingTextBlockDataTemplate}"/>
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="LoadingMenuPlaylistsViewSmall" >
+    
+    <DataTemplate x:Key="LoadingPlaylstListView" >
         <Grid x:Name="ContentRoot">
             <Grid>
                 <ListBox Margin="0" 
@@ -374,7 +278,7 @@
                          common:ItemClickCommand.Command="{Binding ItemClickCommand}"
                          common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
                          ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
-                         ItemTemplate="{StaticResource LoadingMenuPlaylistsViewItem}"/>
+                         ItemTemplate="{StaticResource LoadingPlaylistListViewItemLarge}"/>
 
                 <Grid x:Name="BlockMulti" 
                       Width="50" 
@@ -388,81 +292,24 @@
         </Grid>
     </DataTemplate>
 
-    <DataTemplate x:Key="CategoryLoadingListView" >
-        <Grid>
-            <ListBox ItemsSource="{Binding Items}"
-                     ItemTemplate="{StaticResource CategoryItemTemplate}"
-                     toolkit:TiltEffect.IsTiltEnabled="True"
-                     common:ItemClickCommand.Command="{Binding ItemClickCommand}"
-                     common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
-                     ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
-                     Margin="0">
-            </ListBox>
-
-            <ContentPresenter Content="{Binding}"
-                              ContentTemplate="{StaticResource LoadingTextBlockDataTemplate}"/>
-        </Grid>
-    </DataTemplate>
-
-    <DataTemplate x:Key="CommentsLoadingListView" >
+    <DataTemplate x:Key="LoadingMenuPlaylistsView" >
         <Grid x:Name="ContentRoot">
-            <ListBox ItemsSource="{Binding Items}"
-                     common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
-                     ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Margin="0,0,0,15">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
+            <Grid>
+                <ListBox Margin="0" 
+                         Name="PLaylistLisBox"
+                         ItemsSource="{Binding Items}"
+                         toolkit:TiltEffect.IsTiltEnabled="True" 
+                         common:ItemClickCommand.Command="{Binding ItemClickCommand}"
+                         common:ScrollViewerMonitor.LoadMoreCommand="{Binding LoadMoreCommand}"
+                         ItemContainerStyle="{StaticResource StretchedListBoxItemStyle}"
+                         ItemTemplate="{StaticResource LoadingMenuPlaylistsViewItemLarge}"/>
 
-                            <Ellipse Width="45"
-                                     Height="45"
-                                     VerticalAlignment="Top"
-                                     Margin="{Binding IsReplay, Converter={StaticResource CommentMarginConverter}}">
-                                <Ellipse.Fill>
-                                    <ImageBrush>
-                                        <ImageBrush.ImageSource>
-                                            <BitmapImage UriSource="{Binding AuthorProfileImageUrl}" />
-                                        </ImageBrush.ImageSource>
-                                    </ImageBrush>
-                                </Ellipse.Fill>
-                            </Ellipse>
-                            
-                            <StackPanel Grid.Column="1"
-                                        Margin="0,-2,0,0">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <HyperlinkButton Content="{Binding AuthorDisplayName}"
-                                                     Command="{Binding ChannelCommand}"
-                                                     CommandParameter="{Binding AuthorChannelId}"
-                                                     FontSize="{StaticResource PhoneFontSizeNormal}"
-                                                     Foreground="{StaticResource PhoneSubtleBrush}"
-                                                     HorizontalAlignment="Left"
-                                                     HorizontalContentAlignment="Left"/>
-                                    <TextBlock TextWrapping="NoWrap"
-                                               Grid.Column="1"
-                                               Text="{Binding PublishedAt, Converter={StaticResource DateTimeToStringConverter}}"
-                                               HorizontalAlignment="Left"
-                                               Style="{StaticResource PhoneTextExtraSmallStyle}"
-                                               Foreground="{StaticResource PhoneSubtleBrush}"
-                                               Margin="0,7,0,0"/>
-                                </Grid>
-
-                                <TextBlock Text="{Binding TextDisplay}" 
-                                           Style="{StaticResource PhoneTextNormalStyle}"
-                                           TextWrapping="Wrap"
-                                           Margin="10,5,0,0"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-
-                </ListBox.ItemTemplate>
-            </ListBox>
+                <Grid x:Name="BlockMulti" 
+                      Width="50" 
+                      Background="Transparent" 
+                      HorizontalAlignment="Left" 
+                      Visibility="Visible"/>
+            </Grid>
 
             <ContentPresenter Content="{Binding}"
                               ContentTemplate="{StaticResource LoadingTextBlockDataTemplate}"/>
