--- a/LiteTube/SearchPage.xaml
+++ b/LiteTube/SearchPage.xaml
@@ -162,7 +162,7 @@
                 <ContentPresenter Grid.Row="2"
                                   Name="SearchList"
                                   Content="{Binding SearchVideoViewModel}"
-                                  ContentTemplate="{StaticResource LoadingListView}"
+                                  ContentTemplate="{StaticResource LoadingListViewSmall}"
                                   />
             </phone:PivotItem>
 
