--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -92,7 +92,7 @@
         <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeExtraLarge}"/>
         <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
         <Setter Property="Foreground" Value="{StaticResource PhoneSecondaryForegroundBrush}"/>
-        <Setter Property="Margin" Value="18,0,15,0"/>
+        <Setter Property="Margin" Value="18,0,15,-8"/>
     </Style>
 
     <Style x:Key="PhoneTextExtraSmallStyle" TargetType="TextBlock" BasedOn="{StaticResource PhoneTextBlockBase}">
