--- a/LiteTube/Controls/LoadingListViewLarge.xaml
+++ b/LiteTube/Controls/LoadingListViewLarge.xaml
@@ -21,7 +21,7 @@
                 Margin="2">
 
                 <Image Stretch="UniformToFill"
-                       MinHeight="240">
+                       Height="240">
                     <Image.Source>
                         <BitmapImage UriSource="{Binding ImagePath}" 
                                      CreateOptions="BackgroundCreation"/>
@@ -58,7 +58,7 @@
             </Grid>
 
             <StackPanel Grid.Row="1" 
-                        Margin="0,5,0,10">
+                        Margin="-10,5,0,10">
                 <TextBlock Text="{Binding Title}" 
                            Style="{StaticResource PhoneTextNormalStyle}"
                            TextWrapping="Wrap"
