--- a/LiteTube/Controls/LoadingListViewLarge.xaml
+++ b/LiteTube/Controls/LoadingListViewLarge.xaml
@@ -3,13 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:common="clr-namespace:LiteTube.Common"
-    xmlns:converters="clr-namespace:LiteTube.Converters"
-    xmlns:nodes="clr-namespace:LiteTube.ViewModels.Nodes"
-    xmlns:local="clr-namespace:LiteTube.Controls"
-    xmlns:interactivity="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity">
+    xmlns:local="clr-namespace:LiteTube.Controls">
 
     <DataTemplate x:Key="LoadingListViewItemNoMenuLarge">
-        <Grid Margin="0,0,0,10" 
+        <Grid Margin="0,0,0,20" 
               Background="{Binding IsNowPlaying, Converter={StaticResource ColorValueConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
