--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -293,22 +293,24 @@
               Background="Black"
               Name="playerBg">
             <controls:LiteTubePlayer x:Name="player"
-                                         VideoTitle="{Binding Title}"
-                                         ChannelTitle="{Binding ChannelTitle}"
-                                         ItemClickCommand="{Binding RelatedVideosViewModel.ItemClickCommand}"
-                                         PosterSource="{Binding ImagePath}"
-                                         RelatedItems="{Binding RelatedVideosViewModel.Items}"
-                                         LoadMoreCommand="{Binding RelatedVideosViewModel.LoadMoreCommand}"
-                                         VideoQualityItems="{Binding VideoQualities}"
-                                         SelectedVideoQualityItem="{Binding SelectedVideoQualityItem, Mode=TwoWay, UpdateSourceTrigger=Default}"
-                                         IsFullScreenVisible="True"
-                                         IsFullScreenEnabled="True"
-                                         VerticalAlignment="Center"
-                                         IsSkipAheadVisible="False"
-                                         IsSkipBackVisible="False"
-                                         AllowMediaStartingDeferrals="False"
-                                         IsTimeRemainingVisible="True"
-                                         IsDurationVisible="False">
+                                    VideoTitle="{Binding Title}"
+                                    ChannelTitle="{Binding ChannelTitle}"
+                                    ItemClickCommand="{Binding RelatedVideosViewModel.ItemClickCommand}"
+                                    PosterSource="{Binding ImagePath}"
+                                    RelatedItems="{Binding RelatedVideosViewModel.Items}"
+                                    LoadMoreCommand="{Binding RelatedVideosViewModel.LoadMoreCommand}"
+                                    VideoQualityItems="{Binding VideoQualities}"
+                                    SelectedVideoQualityItem="{Binding SelectedVideoQualityItem, Mode=TwoWay, UpdateSourceTrigger=Default}"
+                                    IsFullScreenVisible="True"
+                                    IsFullScreenEnabled="True"
+                                    SkipBackInterval="0:0:10"
+                                    SkipAheadInterval="0:0:10"
+                                    VerticalAlignment="Center"
+                                    IsSkipAheadVisible="True"
+                                    IsSkipBackVisible="True"
+                                    AllowMediaStartingDeferrals="False"
+                                    IsTimeRemainingVisible="True"
+                                    IsDurationVisible="False">
                 <controls:LiteTubePlayer.RenderTransform>
                     <TranslateTransform x:Name="PlayerMover"/>
                 </controls:LiteTubePlayer.RenderTransform>
