--- a/LiteTube/Themes/PlayerMobileTheme.xaml
+++ b/LiteTube/Themes/PlayerMobileTheme.xaml
@@ -84,22 +84,22 @@
                                 <VisualState x:Name="MouseOver"/>
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Stroke" Storyboard.TargetName="OutlineEllipse">
+                                        <!--<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Stroke" Storyboard.TargetName="OutlineEllipse">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
                                         </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="BackgroundEllipse">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
-                                        </ObjectAnimationUsingKeyFrames>
+                                        </ObjectAnimationUsingKeyFrames>-->
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="Content">
-                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneButtonBasePressedForegroundColor}"/>
+                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
                                         </ObjectAnimationUsingKeyFrames>
                                     </Storyboard>
                                 </VisualState>
                                 <VisualState x:Name="Disabled">
                                     <Storyboard>
-                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Stroke" Storyboard.TargetName="OutlineEllipse">
+                                        <!--<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Stroke" Storyboard.TargetName="OutlineEllipse">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledColor}"/>
-                                        </ObjectAnimationUsingKeyFrames>
+                                        </ObjectAnimationUsingKeyFrames>-->
                                         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="Content">
                                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledColor}"/>
                                         </ObjectAnimationUsingKeyFrames>
@@ -108,10 +108,15 @@
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         <Viewbox Margin="{TemplateBinding Padding}">
-                            <Grid Height="40" Width="40">
-                                <Ellipse x:Name="BackgroundEllipse" Fill="{TemplateBinding Background}" UseLayoutRounding="False"/>
-                                <Ellipse x:Name="OutlineEllipse" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="2" UseLayoutRounding="False"/>
-                                <ContentControl x:Name="Content" Content="{TemplateBinding Content}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Grid Height="40" 
+                                  Width="40">
+                                <!--<Ellipse x:Name="BackgroundEllipse" Fill="{TemplateBinding Background}" UseLayoutRounding="False"/>-->
+                                <!--<Ellipse x:Name="OutlineEllipse" Stroke="{TemplateBinding BorderBrush}" StrokeThickness="2" UseLayoutRounding="False"/>-->
+                                <ContentControl x:Name="Content" 
+                                                Content="{TemplateBinding Content}" 
+                                                Foreground="{TemplateBinding Foreground}" 
+                                                HorizontalAlignment="Center" 
+                                                VerticalAlignment="Center"/>
                             </Grid>
                         </Viewbox>
                     </Grid>
@@ -899,59 +904,62 @@
                     </StackPanel>
 
                     <!--Play / pause buttons-->
-                    <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center"
-                                Margin="0,10,0,0">
+                    <StackPanel Orientation="Horizontal" 
+                                Grid.Row="1" 
+                                HorizontalAlignment="Center"
+                                Margin="0,20,0,0">
 
                         <StackPanel Orientation="Horizontal" x:Name="NonEssentialsNearLeft"
                                     Margin="0,0,0,0">
-                            <Button x:Name="SkipPreviousButton" 
-                                    Style="{TemplateBinding TransportBarButtonStyle}" 
-                                    Width="50" Height="50" 
+                            <Button x:Name="SkipPreviousButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" 
                                     Visibility="{Binding IsSkipPreviousButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
-                                    Margin="10,0,0,0">
+                                    Margin="0,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:SkipPreviousButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
                             </Button>
-                            <Button x:Name="RewindButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" Visibility="{Binding IsRewindButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                            <Button x:Name="RewindButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" 
+                                    Visibility="{Binding IsRewindButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
+                                    Margin="0,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:RewindButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
                             </Button>
-                            <Button x:Name="SkipBackButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" Visibility="{Binding IsSkipBackButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                            <Button x:Name="SkipBackButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" 
+                                    Visibility="{Binding IsSkipBackButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
+                                    Margin="0,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:SkipBackButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
                             </Button>
                         </StackPanel>
 
-                        <Button x:Name="PlayPauseButton" 
-                                Style="{TemplateBinding TransportBarButtonStyle}" 
-                                Width="70" 
-                                Height="70" 
+                        <Button x:Name="PlayPauseButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="120" Height="120" 
                                 Visibility="{Binding IsPlayPauseButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"
-                                Margin="50,0,50,0">
+                                Margin="0,0,0,0">
                             <local:MediaControls.Behavior>
                                 <local:PlayPauseButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                             </local:MediaControls.Behavior>
                         </Button>
 
                         <StackPanel Orientation="Horizontal" x:Name="NonEssentialsNearRight">
-                            <Button x:Name="SkipAheadButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" Visibility="{Binding IsSkipAheadButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                            <Button x:Name="SkipAheadButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" 
+                                    Visibility="{Binding IsSkipAheadButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}"
+                                    Margin="0,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:SkipAheadButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
                             </Button>
-                            <Button x:Name="FastForwardButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" Visibility="{Binding IsFastForwardButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" Margin="10,0,10,0">
+                            <Button x:Name="FastForwardButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" 
+                                    Visibility="{Binding IsFastForwardButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
+                                    Margin="0,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:FastForwardButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
                             </Button>
-                            <Button x:Name="SkipNextButton" 
-                                    Style="{TemplateBinding TransportBarButtonStyle}" 
-                                    Width="50" Height="50" 
+                            <Button x:Name="SkipNextButton" Style="{TemplateBinding TransportBarButtonStyle}" Width="70" Height="70" 
                                     Visibility="{Binding IsSkipNextButtonVisible, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource VisibleIfConverter}}" 
-                                    Margin="0,0,10,0">
+                                    Margin="0,0,0,0">
                                 <local:MediaControls.Behavior>
                                     <local:SkipNextButtonBehavior ViewModel="{Binding ViewModel, RelativeSource={RelativeSource TemplatedParent}}"/>
                                 </local:MediaControls.Behavior>
