--- a/LiteTube/Controls/LoadingListView/PlayListViewItemNoMenu.xaml
+++ b/LiteTube/Controls/LoadingListView/PlayListViewItemNoMenu.xaml
@@ -6,7 +6,7 @@
     xmlns:controls="clr-namespace:LiteTube.Controls">
 
     <DataTemplate x:Key="PlaylistItemSmall">
-        <Grid Margin="0,0,0,10">
+        <Grid Margin="{StaticResource DefaultListViewItemMargin}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -56,7 +56,7 @@
     </DataTemplate>
 
     <DataTemplate x:Key="PlaylistItemLarge">
-        <Grid Margin="0,0,0,20">
+        <Grid Margin="0,10,0,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
