--- a/LiteTube/PlaylistVideoPage.xaml
+++ b/LiteTube/PlaylistVideoPage.xaml
@@ -59,7 +59,8 @@
                                Style="{StaticResource PivotItemHeaderTextStyle}"/>
                 </phone:PivotItem.Header>
                 <ScrollViewer>
-                    <Grid DataContext="{Binding VideoViewModel}">
+                    <Grid DataContext="{Binding VideoViewModel}"
+                          Margin="{StaticResource DefaultContentMargin}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
@@ -253,7 +254,8 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <Grid Visibility="{Binding CommentsViewModel.IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Grid Visibility="{Binding CommentsViewModel.IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}"
+                          Margin="{StaticResource DefaultContentMargin}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
