--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -26,8 +26,9 @@
 
     <Thickness x:Key="DefaultTextBlockMargin">0,12,0,5</Thickness>
     <Thickness x:Key="DefaultControlMargin">0,12,0,0</Thickness>
-    <Thickness x:Key="DefaultListBoxMargin">18,12,18,0</Thickness>
+    <Thickness x:Key="DefaultListBoxMargin">0,12,0,0</Thickness>
     <Thickness x:Key="DefaultContentMargin">18,0,18,0</Thickness>
+    <Thickness x:Key="DefaultListViewItemMargin">18,5,18,5</Thickness>
     
     <Style x:Key="PageThemeStyle" TargetType="phone:PhoneApplicationPage">
         <Setter Property="shell:SystemTray.BackgroundColor" Value="{StaticResource NavigationPanelColor}" />
@@ -81,7 +82,7 @@
     </Style>
 
     <Style x:Key="PanoramaContentStyle" TargetType="ContentPresenter">
-        <Setter Property="Margin" Value="10,-24,0,0"/>
+        <Setter Property="Margin" Value="-10,-24,0,0"/>
     </Style>
 
     <Style x:Key="PivotContentStyle" TargetType="ContentPresenter">
