--- a/LiteTube/PlaylistPage.xaml
+++ b/LiteTube/PlaylistPage.xaml
@@ -42,7 +42,7 @@
         
         <ContentPresenter Grid.Row="2"
                           Content="{Binding}"
-                          ContentTemplate="{StaticResource LoadingListView}"/>
+                          ContentTemplate="{StaticResource LoadingListViewSmall}"/>
 
         <!--Deleting block control-->
         <controls:DeletingBlockControl Grid.Row="0"
